修改E店统计，订单配送时效样式

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -2753,16 +2753,16 @@ var showTimeOrder = function(dataServer){
 				            		name: '0.5-1小时内'
 				              }, {
 			            	    value: dataServer.jsonSelCount[3],
-			            	    name: '1—2小时'
+			            	    name: '1-2小时'
 			            	  }, {
 			            	    value: dataServer.jsonSelCount[4],
-			            	    name: "2—4小时"
+			            	    name: "2-4小时"
 			            	  }, {
 			            	    value: dataServer.jsonSelCount[5],
-			            	    name: "4—12小时"
+			            	    name: "4-12小时"
 			            	  }, {
 			            	    value: dataServer.jsonSelCount[6],
-			            	    name: "12—24小时"
+			            	    name: "12-24小时"
 			            	  }, {
 			            	    value: dataServer.jsonSelCount[7],
 			            	    name: "大于1天"
