--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -644,7 +644,7 @@
                   <td></td>
                 </tr>
                 <tr>
-                  <th>单场活动人数</th>
+                  <th>覆盖社区数量</th>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -1264,7 +1264,7 @@
                 <td><input type="text" readonly="readonly" class="form-control"></td>
               </tr>
               <tr>
-                <th>单场活动人数</th>
+                <th>覆盖社区数量</th>
                 <td><input type="text" class="form-control"></td>
                 <td><input type="text" class="form-control"></td>
                 <td><input type="text" class="form-control"></td>
