限制本月之后的日期选择

--- a/WebContent/crm/dynamicData_newaddcus_analysis.html
+++ b/WebContent/crm/dynamicData_newaddcus_analysis.html
@@ -263,14 +263,16 @@
 	  extend: 'skin/crmskin/style.css' //加载新皮肤
 	  
 	});
-
+	var cur_date = new Date();
+	var year_month = cur_date.getFullYear()+"-"+(cur_date.getMonth()+1);
 	 laydate.render({//月份控件
 			elem:'#be_date1',
 			value:new Date(),
 			type:"month",
 			btns: ['now', 'confirm'],
 			theme: '#11214e',
-			min: '2018-1-1'
+			min: '2018-1-1',
+			max:year_month
 		});
 
 	var cityId = decode64(getUrlParamByKey("c"));//城市ID
