小程序调试

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -176,7 +176,7 @@
             </div>
           </div>
         </div> -->
-<!--       <div class="box box-default">
+      <div class="box box-default">
           <div class="box-body">
             <div class="col-sm-8">
               <h4 class="text-light-blue"><strong>全部订单时段性分布</strong></h4>
@@ -187,7 +187,7 @@
               <div class="col-sm-12 no-padding" id="main21" style="height: 360px;"></div>
             </div>
           </div>
-        </div> -->
+        </div>
       <div class="box box-default">
           <div class="box-body">
             <div class="col-sm-6">
@@ -1069,8 +1069,8 @@ function doEshopMemberSum(){
         hover: "#68d099"
       });
     // $('#citySelect').css('display','block');
-     //localStorage.clear();
-	 //loginShow();
+    	localStorage.clear();
+	 	loginShow();
 	 //获取社员量
 
 });
