--- a/WebContent/shortMessage/messageType_list.html
+++ b/WebContent/shortMessage/messageType_list.html
@@ -78,7 +78,7 @@
 <div class="panel panel-default" style="margin: 10px">
     <div class="panel-heading">
         <h4 class="panel-title">
-                   短信类型列表
+                   用户组列表
         </h4>
     </div>
 </div>
