修改商品订单类别提示问题

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -2843,7 +2843,7 @@ var showOrderType = function(dataServer){
 			    calculable : true,
 			    series : [
 			    	{
-			            name:'配送时效',
+			            name:'订单种类',
 			            type:'pie',
 			            radius : [30, 110],
 			            center : ['50%', '50%'],
