modify & commit manually.

--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -484,17 +484,12 @@
             </div>
           </div>
         </div>
-<<<<<<< HEAD
-		<!-- <div class="box box-default">
-          <div class="box-header h4 text-light-blue"><strong>国安侠人均消费用户数</strong></div>
-=======
 		<div class="box box-default" style="margin-top: 50px;">
           <div class="box-header h1 text-light-blue"><strong>国安侠人均消费用户数</strong></div>
->>>>>>> develop
           <div class="box-body">
-            <p><b>2018年6月国安侠人均消费用户数分析</b></p>
+           <!--  <p><b>2018年6月国安侠人均消费用户数分析</b></p>
             <p>与历史对比，6月消费用户相对5月整体减少，与4月保持相当，其中<b class="text-red">广州</b>、<b class="text-red">沈阳</b>增长明显</p>
-            <p>从新老用户占比来看，6月全国拉新占比<b class="text-red">63%</b>，<b class="text-red">沈阳</b>拉新增长明显，<b class="text-red">广州</b>复购用户增长明显</p>
+            <p>从新老用户占比来看，6月全国拉新占比<b class="text-red">63%</b>，<b class="text-red">沈阳</b>拉新增长明显，<b class="text-red">广州</b>复购用户增长明显</p> -->
             <div id="main40" style="height: 350px;"></div>
             <table class="table table-striped table-bordered" >
              <tr class="bg-light-blue" id="empcustomertotal" >
@@ -512,7 +507,7 @@
                 <th><span id="three"></span></th>
                 <th><span id="four"></span></th>
               </tr> 
-              <tr>
+              <!-- <tr>
                 <td bgcolor="#ff0">北京</td>
                 <td>125</td>
                 <td>1333</td>
@@ -526,10 +521,10 @@
                 <td>1069</td>
                 <td>1069</td>
                 <td>1069</td>
-              </tr>
+              </tr> -->
             </table>
           </div>
-        </div> -->
+        </div>
         <div class="box box-default" style="margin-top: 50px;">
           <div class="box-header h1 text-light-blue"><strong>用户分析</strong></div>
           <div class="box-body">
@@ -892,8 +887,8 @@
                 </tr>
               </table>
               <div class="clearfix">
-                <div class="col-sm-6" id="main20" style="height: 350px;"></div>
-                <div class="col-sm-6" id="main21" style="height: 350px;"></div>
+                <div class="col-sm-7" id="main20" style="height: 350px;"></div>
+                <div class="col-sm-5" id="main21" style="height: 350px;"></div>
               </div>
               <table class="table table-striped table-bordered " id="pfoperate1_1" style="margin-top: 15px;">
                 <tr class="bg-light-blue">
