员工基础数据添加修改按钮，添加离职人员中，身份证号重复的提醒。

--- a/WebContent/data_access/human_store_add.html
+++ b/WebContent/data_access/human_store_add.html
@@ -132,6 +132,21 @@ Date.prototype.format=function(fmt) {
 
 	var id = getUrlParamByKey("id");
 
+	function leavecheck(){
+		var cardnumber = $("#cardnumber").val();
+		var notexist=false;
+		doManager("HumanresourcesManager", "queryHumanresourceListByCardNumber", cardnumber,
+				function(data, textStatus, XMLHttpRequest) {
+					if (data.result) {
+						var jsonData = $.fromJSON(data.data);
+						if(jsonData==null){
+							notexist=true;
+						}
+					}
+				}, false);
+		
+		return notexist;
+	}
 	
 	function dataCheck() {
 		var name = $("#name").val();
@@ -436,6 +451,22 @@ Date.prototype.format=function(fmt) {
 			$("#btnSave").attr("disabled",""); 
 			return;
 		}
+		//如果离职中存在
+		if(!leavecheck()){
+			var flag = false;
+			$$.showConfirm("提示","包含离职的员工信息，是否保存？",function () {
+				todosave();
+            });
+			$("#btnSave").attr("disabled",""); 
+		}else{//离中不存在 
+			todosave();
+		}
+		
+		
+	}
+	
+	
+	function todosave(){
 		var arr = ["isofficial","employee_no","relationtype","tel","relationname","nation","education","school","profession","remark","cardnumber","birthday","censusregister","marriage","phone","topostdate","name","orgname","deptlevel1","deptlevel2","deptlevel3","reporthigher","store_id","storename","zw","jobchannel","offername","citySelect","interndate","contractdatestart","contractdateend"];
 		var o = {};
 		for ( var i in arr) {
@@ -492,6 +523,10 @@ Date.prototype.format=function(fmt) {
 			}
 		});
 	}
+	
+	
+	
+	
 
 	
 	function doBack(){
