修改商品排名导出文件的bug,加入查询地区的口径

--- a/WebContent/crm/headquarters_details.html
+++ b/WebContent/crm/headquarters_details.html
@@ -127,6 +127,11 @@
                         <h3 class="box-title"><strong id="typeRankName"></strong></h3>
                     </div>
                     <!-- /.box-header -->
+					<div style="padding-left: 10px;">
+						<label style="background: none; cursor: default;">查询口径</label>
+						<span id="line" style="cursor: default;">&nbsp;&gt;&nbsp;</span>
+						<label style="background: none; cursor: default;" id="cityType"></label>
+					</div>
                     <div class="form-group col-lg-10" style="margin-top: 20px; padding: 0 25px;">
             		</div>
                     <div class="form-group col-lg-2" style="margin-top: 20px; padding: 0 25px;">
