优化GMV走势显示

--- a/WebContent/crm/221.html
+++ b/WebContent/crm/221.html
@@ -613,7 +613,7 @@
 		  {
 			data: gmvXData,
 			type: 'category',
-	        boundaryGap: false,
+// 	        boundaryGap: false,
 	        axisLine: {
 	          lineStyle: {
 	            color: '#666'
