提交OSS上传文件功能，以及考勤信息备份存储到OSS上的代码

--- a/WebContent/hr/work_record.html
+++ b/WebContent/hr/work_record.html
@@ -958,7 +958,11 @@ function mGetDate(year, month){
 			if (data.result) {
 				//alert("导出成功！ ");
 				var ret = JSON.parse(data.data); 
-				window.location.href=ret;
+				if(ret==null||ret=="null"){
+					$$.showMessage("系统信息", "导出失败!");
+				}else{
+					window.location.href=ret;
+				}
 			} else {
 				$$.showMessage("系统信息", "导出失败!");
 			}
