--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -198,6 +198,10 @@
 										<dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-bar-chart"></span>用户分析</a></dd>
 										<!-- <dd><a href="javascript:goto_user_k()"><span class="fa fa-bar-chart"></span>用户分析</a></dd> -->
                                     </dl>
+                                    <dl class="col-sm-3">
+                                        <dt><i></i>运营专题</dt>
+                                        <dd><a href="javascript:goto221()"><span class="fa fa-life-buoy"></span>221运营分析</a></dd>
+                                    </dl>
                                 </div>
                             </div>
                         </li>
