--- a/WebContent/data_access/observe_parameter_view.html
+++ b/WebContent/data_access/observe_parameter_view.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>目标值信息列表</title>
     <script type="text/javascript" src="../scripts/bidLib.js"></script>
-    <script type="text/javascript" src="laydate/laydate.js"></script>
+    <script type="text/javascript" src="../crm/laydate/laydate.js"></script>
     <script type="text/javascript" src="../scripts/auto.js"></script> 
     <link href="../startbootstrap/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../startbootstrap/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
